refactor: orm/plugin 按 JDK17 语法现代化并升级 demo 基线
- mybatis-plus-core DAO：Arrays.asList(枚举派生数组) 转 List.of（.in() 只迭代）
- mybatis sb3/sb4 FlowAutoConfig：mapperLocations 只读列表转 List.of
- modes-sb SafeMethodResolver：new HashSet<>(Arrays.asList(...)) 转 Set.of
- plugin-ui-core：只读 stream 终点转 toList()（WarmFlowService、TreeUtil）
- 保留 6 处 TypeReference/TypeToken 匿名超类型令牌（泛型反射必需）
- demo：spring-boot-starter-parent 3.0.1 -> 3.5.16，移除 lombok 1.18.30 钉版

Co-Authored-By: Claude Code <noreply@anthropic.com>