@@ -20,7 +20,6 @@ import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -148,7 +147,7 @@ public class FlowAutoConfig extends BeanConfig {
     }
 
     private void loadXml(SqlSessionFactory factory) {
-        List<String> mapperList = Arrays.asList("warm/flow/FlowDefinitionMapper.xml", "warm/flow/FlowHisTaskMapper.xml",
+        List<String> mapperList = List.of("warm/flow/FlowDefinitionMapper.xml", "warm/flow/FlowHisTaskMapper.xml",
             "warm/flow/FlowInstanceMapper.xml", "warm/flow/FlowNodeMapper.xml", "warm/flow/FlowFormMapper.xml",
             "warm/flow/FlowSkipMapper.xml", "warm/flow/FlowTaskMapper.xml", "warm/flow/FlowUserMapper.xml");
         org.apache.ibatis.session.Configuration configuration = factory.getConfiguration();
