@@ -9,8 +9,6 @@ import org.springframework.expression.spel.support.DataBindingMethodResolver;
 import org.springframework.lang.NonNull;
 import org.springframework.lang.Nullable;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -22,7 +20,7 @@ import java.util.Set;
  */
 public class SafeMethodResolver implements MethodResolver {
 
-    private static final Set<String> DANGEROUS_METHODS = new HashSet<>(Arrays.asList(
+    private static final Set<String> DANGEROUS_METHODS = Set.of(
         "getRuntime",
         "exec",
         "forName",
@@ -35,7 +33,7 @@ public class SafeMethodResolver implements MethodResolver {
         "getDeclaredField",
         "getMethod",
         "getDeclaredMethod"
-    ));
+    );
 
 
     @Nullable
