@@ -20,7 +20,6 @@ import org.dromara.warm.flow.core.utils.StringUtils;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TreeUtil {
     private TreeUtil() {
@@ -34,7 +33,7 @@ public class TreeUtil {
      */
     public static List<Tree> buildTree(List<Tree> trees) {
         List<Tree> returnList = new ArrayList<>();
-        List<String> tempList = trees.stream().map(Tree::getId).collect(Collectors.toList());
+        List<String> tempList = trees.stream().map(Tree::getId).toList();
         for (Tree dept : trees) {
             // 如果是顶级节点, 遍历该父节点的所有子节点
             if (!tempList.contains(dept.getParentId())) {
